# keepsorted

./: CHANGELOG.md  Cargo.toml  README.md  run-all.sh  run-clippy.sh  run-e2e-tests.sh  run-tests.sh
.github/: CODEOWNERS
.github/workflows/: release.yaml  workflow.yaml
e2e-tests/: plain_text_3_out.txt
misc/: count_rust_derive_traits.py  inspect.py  rust_derive.py
old/src/: generic.rs
old/tests/: cargo_toml.rs  cli.rs
old/tests/e2e-tests/: bazel_1_out.bazel
research/derive_order/: Cargo.toml  README.md
research/derive_order/derive_macros/: Cargo.toml
research/derive_order/derive_macros/src/: lib.rs
research/derive_order/use_macros/: Cargo.toml
research/derive_order/use_macros/src/: lib.rs
src/: bazel.rs  block.rs  cargo_toml.rs  default.rs  lib.rs  main.rs  tests.rs
src/strategies/: bazel.rs  cargo_toml.rs  codeowners.rs  generic.rs  gitignore.rs  mod.rs  rust_derive.rs
src/tests/: bazel.rs
tests/: 0001_expected.bazel  0001_src.bazel  0002_src.txt  _bazel_1_in.bazel  _bazel_1_out.bazel  _bazel_2_in.bazel  _bazel_2_out.bazel  bazel.rs  bazel_1_in.bazel  bazel_1_out.bazel  bazel_2_in.bazel  bazel_2_out.bazel  cargo_toml.rs  codeowners.rs  common.rs  default.rs  e2e-tests.rs  generic.rs  gitignore.rs  plain_text_1_in.txt  plain_text_2_out.txt  plain_text_3_in.txt  plain_text_expected.txt  process_lines.rs  rust_derive.rs
tests/e2e-tests/: bazel_2_in.bazel  bazel_2_out.bazel  plain_text_1_out.txt  plain_text_2_in.txt
tests/e2e-tests/cargo_toml/1/: Cargo_out.toml
tests/e2e-tests/cargo_toml/2/: Cargo.toml  Cargo_out.toml
tests/e2e-tests/cargo_toml_1/: Cargo.toml
tests/e2e-tests/codeowners/.github/: CODEOWNERS  CODEOWNERS_out
tests/e2e-tests/gitignore/: .gitignore  .gitignore_out
tests/e2e-tests/rust_derive/: 1_in.rs  1_out.rs  2_in.rs  2_out.rs  3_in.rs  3_out.rs
