rust_library(
    name = "some_library",
    srcs = [
        "src/lib.rs",
    ],
    proc_macro_deps = [
        # Keep sorted.
        ":bbb",
        ":aaa",
        "//dir/subdir:bbb",
        "//dir/subdir:aaa",
        "@crate_index//:bbb",
        "@crate_index//:aaa",
    ] + select({
        "@platforms//os:osx": [
            # Keep sorted.
            ":bbb",
            ":aaa",
            "//dir/subdir:bbb",
            "//dir/subdir:aaa",
            "@crate_index//:bbb",
            "@crate_index//:aaa",
        ],
        "//conditions:default": [
        ],
    }),
    deps = [
        # Keep sorted.
        ":bbb",
        ":aaa",
        "//dir/subdir:bbb",
        "//dir/subdir:aaa",
        "@crate_index//:bbb",
        "@crate_index//:aaa",
    ],
)

