rust_library(
    name = "some_library",
    srcs = [
        "src/lib.rs",
    ],
    proc_macro_deps = [
        # Keep sorted.
        ":aaa",
        ":bbb",
        "//dir/subdir:aaa",
        "//dir/subdir:bbb",
        "@crate_index//:aaa",
        "@crate_index//:bbb",
    ] + select({
        "@platforms//os:osx": [
            # Keep sorted.
            ":aaa",
            ":bbb",
            "//dir/subdir:aaa",
            "//dir/subdir:bbb",
            "@crate_index//:aaa",
            "@crate_index//:bbb",
        ],
        "//conditions:default": [
        ],
    }),
    deps = [
        # Keep sorted.
        ":aaa",
        ":bbb",
        "//dir/subdir:aaa",
        "//dir/subdir:bbb",
        "@crate_index//:aaa",
        "@crate_index//:bbb",
    ],
)

