rust_library(
    name = "some_library",
    srcs = [
        "src/lib.rs",
    ],
    deps = [
        # Keep sorted.
        "nested",
        ":bbb",
        ":aaa",
        "//dir/subdir/folder:xxx",
        "//dir/subdir/folder",  # Some in-line comment.
        "//dir/subdir:bbb",
        # Some multi-line comment
        # about the dependency below.
        "//dir/subdir:aaa",
        "@crate_index//project",
        "@crate_index//:base64-bytestring",
        "@crate_index//:base32",
        "@crate_index//:base",
        "@crate_index//:bbb",
        "@crate_index//:aaa",
        requirement("gitpython"),
        requirement("python-gitlab"),
        requirement("pyyaml"),
        # Some multi-line
        # trailing comment.
    ],
)
