rust_library(
    name = "some_library",
    srcs = [
        "src/lib.rs",
    ],
    deps = [
        # Keep sorted.
        ":aaa",
        ":bbb",
        # Some multi-line comment
        # about the dependency below.
        "//dir/subdir:aaa",
        "//dir/subdir:bbb",
        "//dir/subdir/folder",  # Some in-line comment.
        "//dir/subdir/folder:xxx",
        "@crate_index//:aaa",
        "@crate_index//:base",
        "@crate_index//:base32",
        "@crate_index//:base64-bytestring",
        "@crate_index//:bbb",
        "@crate_index//project",
        requirement("gitpython"),
        requirement("python-gitlab"),
        requirement("pyyaml"),
        # Some multi-line
        # trailing comment.
    ],
)
